--- a/about.html
+++ b/about.html
@@ -9,8 +9,6 @@
     <link rel="stylesheet" href="style.css">
 
     <style>
-
-
         .sobre > img{
             border-radius: 50%;
             width: 20%;
@@ -24,6 +22,10 @@
             transform: scale(2);
         }
 
+        .obs{
+            font-style: italic;
+            font-size: 0.8em;
+        }
 
         @keyframes animacaoin{
             from{
@@ -67,6 +69,9 @@
             <section class="sobre">
                 <h2>Sobre o Autor</h2>
                 <img src="midia/Foto pessoa/perfil completo.jpg" alt="Foto do autor" cite="https://www.pexels.com/pt-br/@ivan-siarbolin-1513699">
+                <aside>
+                    <p class="obs">Clique na imagem para ampliar.</p>
+                </aside>
                 <blockquote>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur maxime molestiae nemo totam enim suscipit quae, eum eius, eaque accusamus vero asperiores voluptatum id perspiciatis deleniti! Eius voluptatibus odio repudiandae?Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate tempora error perferendis ducimus, facilis adipisci dolorum commodi ratione laudantium omnis fugit consequuntur, assumenda impedit qui repellat voluptatum vel? Ratione, porro!
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore minus aliquam autem maxime quia ab magnam molestias? Aspernatur iste quasi iure molestias, assumenda deleniti harum iusto beatae dolore accusantium sunt.</p>
