--- a/about.html
+++ b/about.html
@@ -51,8 +51,12 @@
 
 </head>
 <body>
-    <header><img src="midia/Little Hunter.jpg" alt="Foto de um gato com o seguinte texto escrito : arrombadinhos , gatitos para alegrar o seu dia ">
-        </header>
+    <header>
+        <picture>
+            <source media="(max-width: 400px)" srcset="midia/banner/Little Hunter p.jpg" type="image/jpg">
+            <img src="midia/banner/Little Hunter.jpg" alt="Foto de um gato com o seguinte texto escrito : arrombadinhos , gatitos para alegrar o seu dia ">
+        </picture>
+    </header>
     
         <nav class="menu-top">
             <a href="index.html">Home</a>
