--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <picture>
-            <source media="(max-width: 400px)" srcset="midia/banner/Little-Hunter-p.jpg" type="image/jpg">
+            <source media="(max-width: 400px)" srcset="midia/banner/Little Hunter p.jpg" type="image/jpg">
             <img src="midia/banner/Little Hunter.jpg" alt="Foto de um gato com o seguinte texto escrito : arrombadinhos , gatitos para alegrar o seu dia ">
         </picture>
     </header>
