--- a/contato.html
+++ b/contato.html
@@ -7,6 +7,7 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <title>Contato</title>
     <link rel="stylesheet" href="style.css">
+    <meta name="description" content="Este é apenas um site feito para o curso de HTML5 e CSS3 que estou participando">
 
     <style>
         section{
@@ -17,8 +18,8 @@
 <body>
     <header>
         <picture>
-            <source media="(max-width: 400px)" srcset="midia/banner/Little Hunter p.jpg" type="image/jpg">
-            <img src="midia/banner/Little Hunter.jpg" alt="Foto de um gato com o seguinte texto escrito : arrombadinhos , gatitos para alegrar o seu dia ">
+            <source media="(max-width: 400px)" srcset="midia/banner/Little-Hunter-p.jpg" type="image/jpg">
+            <img src="midia/banner/Little-Hunter.jpg" alt="Foto de um gato com o seguinte texto escrito : arrombadinhos , gatitos para alegrar o seu dia ">
         </picture>
     </header>
     
