--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <title>Arrombadinhos</title>
     <link rel="stylesheet" href="style.css">
+    <meta name="description" content="Este é apenas um site feito para o curso de HTML5 e CSS3 que estou participando">
+
 </head>
 <body>
     <header>
         <picture>
-            <source media="(max-width: 400px)" srcset="midia/banner/Little Hunter p.jpg" type="image/jpg">
-            <img src="midia/banner/Little Hunter.jpg" alt="Foto de um gato com o seguinte texto escrito : arrombadinhos , gatitos para alegrar o seu dia ">
+            <source media="(max-width: 400px)" srcset="midia/banner/Little-Hunter-p.jpg" type="image/jpg">
+            <img src="midia/banner/Little-Hunter.jpg" alt="Foto de um gato com o seguinte texto escrito : arrombadinhos , gatitos para alegrar o seu dia ">
         </picture>
     </header>
     
@@ -26,13 +28,13 @@
         <h1>Fotos enviadas pelos nossos seguidores</h1>
         <section >
             <h2>Afofeado</h2>
-            <img class="conteudo" src="https://images.pexels.com/photos/45201/kitty-cat-kitten-pet-45201.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="gato com olhar fofo" cite="https://www.pexels.com/pt-br/foto/gatinho-branco-e-cinza-em-tecido-estampado-leopardo-marrom-e-preto-45201/">
+            <img class="conteudo" src="https://images.pexels.com/photos/45201/kitty-cat-kitten-pet-45201.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="gato com olhar fofo">
             <aside>Enviado por: @teste001</aside>
         </section>
         
         <section >
             <h2>A mimir</h2>
-            <img class="conteudo" src="https://images.pexels.com/photos/416160/pexels-photo-416160.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="Gato dormindo com as patas levantadas" cite="https://www.pexels.com/pt-br/foto/gatinho-deitado-na-superficie-416160/">
+            <img class="conteudo" src="https://images.pexels.com/photos/416160/pexels-photo-416160.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="Gato dormindo com as patas levantadas">
             <aside>Enviado por: @teste002</aside>
         </section>
 
