--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
             border-radius: 50%;
             width: 20%;
             height: 30%;
-            transition: transform 1s;
+            transition: transform 1s ease-out;
             animation: animacaoout 1s ;
         }
         .sobre > img:hover{
